--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build-webpack": "webpack",
-    "compile:sass": "sass dist/scss/styles.scss dist/css/styles.css -w"
+    "compile:sass": "sass dist/scss/styles.scss dist/css/styles.css -w",
+    "serve": "live-server"
   },
   "keywords": [],
   "author": "",
